--- a/src/components/Code/Code.css
+++ b/src/components/Code/Code.css
@@ -1,3 +1,15 @@
+.a{
+    padding-bottom:250px;
+}
+
+
+.div{
+    font-size: 140%;
+    font-weight: 100;
+    color: darkslategray;
+    margin-bottom:75px;
+}
+
 .sublime-text {
     animation: appear 500ms ease-out forwards;
     width: 416px;
@@ -15,7 +27,10 @@
     border-radius: 8px;
     color: #fff;
     font-size: 100%;
+    margin-bottom:100px;
+    margin-top:50px;
 }
+
 
 .top-bar {
     width: 100%;
@@ -28,7 +43,7 @@
 
 .code {
     position: absolute;
-    margin: 3rem 1rem 3rem 3rem;
+    margin: 3rem 1rem 200px 3rem;
 }
 
 .line {
